[package]
name = "sekkrit"
version = "0.1.0"
authors = ["Carlos Martín Nieto <cmn@dwim.me>"]

[dependencies]
opvault = { path = "../opvault-rs" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
[dependencies.gtk]
version = "0.2.0"
features = ["v3_10"]

[dependencies.glib]
version = "0.3"
features = ["v2_40"]
